src/test/compile-fail/match-struct.rs
// Copyright 2014 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.


struct S { a: int }
enum E { C(int) }

fn main() {
    match (S { a: 1 }) {
        C(_) => (), //~ ERROR mismatched types: expected `S` but found `E`
        _ => ()
    }
}
